syntax = "proto3";

package protocol;

option go_package = "im/core/protocol/pb;pb";

message IMMessage {
  string type = 1;      // 消息类型: text, emoji, image, file, etc.
  string from = 2;      // 发送方UID
  string to = 3;        // 接收方UID
  string content = 4;   // 文本内容、表情代码、图片URL、文件URL等
  int64  timestamp = 5; // 消息时间戳
  string extra = 6;     // 扩展字段（如图片缩略图、文件名、文件大小等）
  string token = 7;     // 登录鉴权token
  bytes  data = 8;      // 二进制数据（图片、文件等）
  string filename = 9;  // 文件名
  int64  filesize = 10; // 文件大小（字节）
  string mime_type = 11; // MIME类型
}

message APIResp {
  int32 code = 1;
  string msg = 2;
  bytes data = 3;
}

message RegisterReq {
  string username = 1;
  string password = 2;
  string email = 3;
}

message LoginReq {
  string uid = 1;
  string password = 2;
}

message ResetPwdReq {
  string email = 1;
  string new_pwd = 2;
  string code = 3;
}

message UpdateUsernameReq {
  string uid = 1;
  string new_username = 2;
}

message UpdatePwdReq {
  string uid = 1;
  string old_pwd = 2;
  string new_pwd = 3;
}

message TokenCheckReq {
  string token = 1;
}

message DeleteAccountReq {
  string uid = 1;
}

message UserInfoReq {
  string token = 1;
}

message LogoutReq {
  string token = 1;
}

message SendEmailCodeReq {
  string email = 1;
}

// 通知消息
message Notification {
  string type = 1;      // 通知类型，如 friend_request
  string from = 2;      // 触发方UID
  string to = 3;        // 接收方UID
  string content = 4;   // 通知内容（如验证消息）
  int64  timestamp = 5; // 通知时间
  string extra = 6;     // 扩展字段
}

// 文件信息
message FileInfo {
  string filename = 1;      // 服务器文件名
  string original_name = 2; // 原始文件名
  int64  size = 3;          // 文件大小
  string type = 4;          // 文件类型
  string url = 5;           // 文件URL
} 